# esp32_v5.4.1

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ADC/: adc.c  adc.h
components/BSP/AP3216C/: ap3216c.c  ap3216c.h
components/BSP/AT24C02/: at24c02.c  at24c02.h
components/BSP/ES8388/: es8388.c  es8388.h
components/BSP/ESPTIMER/: esptimer.c  esptimer.h
components/BSP/EXIT/: exit.c  exit.h
components/BSP/LED/: led.c  led.h
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: myiic.c  myiic.h
components/BSP/PWM/: pwm.c  pwm.h
components/BSP/RMT_RX/: rmt_nec_rx.c  rmt_nec_rx.h
components/BSP/RMT_TX/: rmt_nec_tx.c  rmt_nec_tx.h
components/BSP/SPIFFS/: my_spiffs.c  my_spiffs.h
components/BSP/SPI_SD/: spi_sd.c  spi_sd.h
components/BSP/TIMG/: timg.c  timg.h
components/BSP/WIFI/: http.c  http.h  wifi.c  wifi.h
components/BSP/XL9555/: xl9555.c  xl9555.h
components/IREXT/: CMakeLists.txt  ir_ac_control.c  ir_decode.c
components/Middlewares/: CMakeLists.txt
components/Middlewares/MYFATFS/: exfuns.c  exfuns.h
main/: CMakeLists.txt  common.h  idf_component.yml  main.c  mp3_decoder.c  mp3_decoder.h
main/APP/AUDIO/: audioplay.c  audioplay.h  record.c  record.h  wavplay.c  wavplay.h
